# parallel-programming

./: .gitignore  CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  operations.cpp  operations.h
openMP/: CMakeLists.txt  main.cpp
operations/: operations.cpp  operations.h
